# AimForge

./: .clang-format  CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  application.cc  application.h  camera.cc  camera.h  format.bat  format.sh  glad_loader.cc  glad_loader.h  main.cc  model.cc  model.h  replay.fbs  replay_generated.h  room.cc  room.h  shader.cc  sound.cc  sound.h  sphere.cc  sphere.h  time_util.cc  time_util.h  util.h
src/aim/: CMakeLists.txt  application.cc  application.h  camera.cc  camera.h  model.cc  model.h  replay.fbs  room.cc  room.h  scenario_timer.cc  scenario_timer.h  shader.cc  shader.h  sound.cc  sphere.h  target.h  time_util.cc  util.h
src/aim/audio/: sound.cc  sound.h  sound_manager.cc  sound_manager.h
src/aim/common/: field.h  file_util.cc  file_util.h  files.cc  files.h  geometry.cc  geometry.h  imgui_ext.h  log.h  mat_icons.h  random.h  resource_name.h  scope_guard.h  search.cc  search.h  simple_types.h  time_util.cc  time_util.h  times.cc  times.h  util.cc  util.h  wall.cc  wall.h
src/aim/core/: application.cc  application.h  application_state.cc  application_state.h  camera.cc  camera.h  file_system.cc  file_system.h  font_manager.cc  font_manager.h  history_manager.cc  history_manager.h  metronome.cc  metronome.h  navigation_event.h  perf.h  playlist_manager.cc  playlist_manager.h  profile_selection.h  scenario_manager.cc  scenario_manager.h  screen.cc  screen.h  settings_manager.cc  settings_manager.h  stats_manager.cc  stats_manager.h  target.cc  target.h  tracking_sound.h
src/aim/database/: history_db.cc  history_db.h  settings_db.cc  settings_db.h  sqlite_util.h  stats_db.cc  stats_db.h
src/aim/fbs/: common.fbs  common_generated.h  generate.bat  generate_fbs.bat  replay.fbs  replay_generated.h  scenario.fbs  scenario_def.fbs  scenario_def_generated.h  scenario_generated.h  settings.fbs  settings_generated.h  theme.fbs  theme_generated.h
src/aim/graphics/: crosshair.cc  crosshair.h  cylinder_renderer.cc  cylinder_renderer.h  glad_loader.cc  image.h  renderer.cc  renderer.h  room.cc  room.h  room_renderer.cc  room_renderer.h  shader.cc  shader.h  shapes.cc  shapes.h  sphere.cc  sphere.h  sphere_renderer.cc  sphere_renderer.h  texture_manager.cc  texture_manager.h  textures.cc  textures.h
src/aim/graphics/shaders/: compile.sh
src/aim/graphics/shaders/compiled/: position_and_texture_coord.vert.dxil  position_and_texture_coord.vert.msl  position_and_texture_coord.vert.spv  progress_bar.frag.dxil  progress_bar.frag.msl  progress_bar.frag.spv  solid_color.frag.dxil  solid_color.frag.msl  solid_color.frag.spv  solid_color.vert.dxil  solid_color.vert.msl  solid_color.vert.spv  texture.frag.dxil  texture.frag.msl  texture.frag.spv
src/aim/graphics/shaders/source/: compile_all.sh  position_and_texture_coord.vert.hlsl  progress_bar.frag.hlsl  solid_color.frag.hlsl  solid_color.vert.hlsl  texture.frag.hlsl
src/aim/proto/: common.pb.cc  common.pb.h  common.proto  generate.bat  generate.sh  playlist.pb.cc  playlist.pb.h  replay.pb.cc  replay.pb.h  replay.proto  scenario.pb.cc  scenario.pb.h  scenario.proto  settings.pb.cc  settings.pb.h  settings.proto  theme.pb.cc  theme.pb.h  theme.proto
src/aim/proto/schema/: common.proto  generate.sh  playlist.proto  replay.proto  scenario.proto  settings.proto  theme.proto
src/aim/scenario/: barrel_scenario.cc  base_scenario.cc  base_scenario.h  centering_scenario.cc  centering_scenario.h  model.cc  quick_settings_screen.cc  replay_viewer.cc  replay_viewer.h  scenario.cc  scenario.h  scenario.txt  scenario_timer.cc  scenario_timer.h  screens.h  static_scenario.cc  static_scenario.h  stats_screen.cc  stats_screen.h  stats_screen.txt  target.cc  target.h  target_placement.cc  target_placement.h  tracking_sound.h
src/aim/scenario/types/: barrel_scenario.cc  centering_scenario.cc  linear_scenario.cc  scenario_types.h  static_scenario.cc  wall_arc_scenario.cc  wall_movement_scenario.cc  wall_strafe_scenario.cc  wall_swerve_scenario.cc
src/aim/settings/: settings_manager.cc  settings_manager.h
src/aim/ui/: app_state.cc  app_state.h  app_ui.cc  app_ui.h  home_screen.cc  home_screen.h  playlist_ui.cc  playlist_ui.h  quick_settings_screen.cc  quick_settings_screen.h  scenario_editor.cc  scenario_editor.h  scenario_editor_screen.cc  scenario_editor_screen.h  scenario_ui.cc  scenario_ui.h  settings_screen.cc  settings_screen.h  stats_screen.cc  stats_screen.h  theme_editor_screen.cc  theme_editor_screen.h  ui_component.h  ui_screen.cc  ui_screen.h
src/resources/: imgui.ini
src/resources/bundles/AF/playlists/: Clicking.json  Dynamic Clicking.json  Smoothness.json  Target Switching.json
src/resources/bundles/AF/scenarios/: AlternateClick Linear Wide.json  AlternateClick Vertical.json  AlternateClick Wide.json  AlternateClick.json  BarrelClick.json  BarrelPulse.json  BarrelTrack Close.json  BarrelTrack.json  BarrelTs.json  Centering 180.json  Centering Accel.json  Centering Always Left Angle 20.json  Centering Always Left.json  Centering Always Right Angle 20.json  Centering Always Right.json  Centering Angle 45 Down.json  Centering Angle 45.json  Centering Angle 60 Down.json  Centering Angle 60.json  Centering Angle 75 Down.json  Centering Angle 75.json  Centering Angle 90.json  Centering Arc Shallow.json  Centering Look Down.json  Centering Look Up.json  Centering Strafe.json  Centering Vertical.json  Centering.json  ClusterClick.json  FireworkClick.json  GlideTrack Focus.json  GlideTrack.json  LinearClick.json  LinearTs.json  MicroClick.json  MicroPoke.json  ReflexClick.json  ShrinkTs Regen.json  ShrinkTs.json  SnakeClick.json  (+20 more)
src/resources/scenarios/Clicking/Static/: Reflex Intermediate.json  Static3 Intermediate Poke.json
src/resources/scenarios/Tracking/Centering/: Centering Intermediate.json  (+4 more)
src/resources/themes/: AF Brick.json  AF Concrete.json  AF Marble.json  AF Static.json  AF Stone.json  Brick.json  Concrete Moon.json  Marble.json  Stone.json  concrete_moon.json  static_default.json
src/shaders/compiled/: triangle.vert.spv
src/shaders/source/: triangle.vert.hlsl
(+10 files in other folders)
